Harden isolation and deterministic verification